--- a/package.json
+++ b/package.json
@@ -1,76 +1,20 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.19",
-        "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.11"
-    },
-    "dependencies": {
-        "admin-resources": "git+https://github.com/themesbrand/admin-resources#master",
-        "@curiosityx/bootstrap-session-timeout": "^1.0.0",
-        "apexcharts": "^3.11.1",
-        "bootstrap": "4.4.1",
-        "bootstrap-colorpicker": "^3.1.2",
-        "bootstrap-datepicker": "^1.9.0",
-        "bootstrap-editable": "^1.0.1",
-        "bootstrap-maxlength": "^1.6.0",
-        "bootstrap-rating": "0.0.1",
-        "bootstrap-touchspin": "^4.2.5",
-        "chance": "^1.1.3",
-        "chart.js": "^2.8.0",
-        "datatables.net": "^1.10.20",
-        "datatables.net-autofill": "^2.3.4",
-        "datatables.net-autofill-bs4": "^2.3.4",
-        "datatables.net-bs4": "^1.10.20",
-        "datatables.net-buttons": "^1.4.2",
-        "datatables.net-buttons-bs4": "^1.4.2",
-        "datatables.net-keytable": "^2.3.2",
-        "datatables.net-keytable-bs4": "^2.3.2",
-        "datatables.net-responsive": "^2.2.1",
-        "datatables.net-responsive-bs4": "^2.2.1",
-        "datatables.net-select": "^1.2.5",
-        "datatables.net-select-bs4": "^1.2.5",
-        "dragula": "^3.7.2",
-        "dropzone": "^5.5.1",
-        "flot-charts": "^0.8.3",
-        "flot.curvedlines": "^1.1.1",
-        "fullcalendar": "^3.10.1",
-        "gmaps": "^0.4.24",
-        "inputmask": "^4.0.9",
-        "ion-rangeslider": "^2.3.0",
-        "jquery": "3.4.1",
-        "jquery-countdown": "^2.2.0",
-        "jquery-knob": "^1.2.11",
-        "jquery-sparkline": "^2.4.0",
-        "jquery-steps": "^1.1.0",
-        "jquery.flot.tooltip": "^0.9.0",
-        "jquery.repeater": "^1.2.1",
-        "jszip": "^3.2.2",
-        "magnific-popup": "^1.1.0",
-        "metismenu": "^3.0.4",
-        "moment": "^2.24.0",
-        "node-waves": "^0.7.6",
-        "parsleyjs": "^2.9.1",
-        "pdfmake": "^0.1.60",
-        "select2": "^4.0.10",
-        "simplebar": "^4.2.3",
-        "summernote": "^0.8.12",
-        "sweetalert2": "^8.18.0",
-        "tinymce": "^5.0.16"
-    }
+    "w1_expires_in": 86400,
+    "refresh_token_valid_time": 1595743734196,
+    "taobao_user_nick": "pm4170121",
+    "re_expires_in": 2592000,
+    "expire_time": 1593238134196,
+    "token_type": "Bearer",
+    "access_token": "6202521ebdfbb4f15a6852db1a965ZZ3c76a683a304ab5c714376387",
+    "taobao_open_uid": "AAHqD3BKALi3TJ7AF56paSi3",
+    "w1_valid": 1593238134196,
+    "refresh_token": "6200f21771b773315e18e53fd963dfhc2514c39fe0bf289714376387",
+    "w2_expires_in": 1800,
+    "w2_valid": 1593153534196,
+    "r1_expires_in": 86400,
+    "r2_expires_in": 86400,
+    "r2_valid": 1593238134196,
+    "r1_valid": 1593238134196,
+    "taobao_user_id": "714376387",
+    "expires_in": 86400
 }
